{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 12,
  "lineage": "5d2c4c19-e630-2e43-8055-aeaf35d063a7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925774240130:subnet/subnet-017c107f70413bbb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 10,
            "cidr_block": "10.62.17.96/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017c107f70413bbb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925774240130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "castsoftwaredev-tgw-subnet-us-east-2c",
              "bfh:environment": "prd",
              "bfh:support-group": "bfh.awsinfrastructure"
            },
            "vpc_id": "vpc-030d39057ed8fa1b5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925774240130:vpc/vpc-030d39057ed8fa1b5",
            "cidr_block": "10.62.20.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09a8b62e20859aeee",
                "cidr_block": "10.62.20.0/24",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-08c389387e7c0e3d6",
                "cidr_block": "10.62.17.64/26",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e38dbb2e9b30e65d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "castsoftwaredev"
                ]
              }
            ],
            "id": "vpc-030d39057ed8fa1b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e464acda55c5e3f1",
            "owner_id": "925774240130",
            "tags": {
              "Name": "castsoftwaredev",
              "bfh:environment": "prd",
              "bfh:support-group": "bfh.awsinfrastructure"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_default_customization_compatibility",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925774240130:security-group/sg-0ec5069580a132d97",
            "description": "Security group for vpcs  that have default configuration directing traffic to firewall by default.",
            "egress": [],
            "id": "sg-0ec5069580a132d97",
            "ingress": [],
            "name": "cast-ec2-sg-aft-default-customization-compatibility20250919041429138200000001",
            "name_prefix": "cast-ec2-sg-aft-default-customization-compatibility",
            "owner_id": "925774240130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030d39057ed8fa1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925774240130:security-group/sg-02a22730af452ad1c",
            "description": "Security group for allowing all corporate originated traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a22730af452ad1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Bread network traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cast-ec2-sg-base20250919041429138500000002",
            "name_prefix": "cast-ec2-sg-base",
            "owner_id": "925774240130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030d39057ed8fa1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925774240130:security-group/sg-0b5c8117a4adc7ec3",
            "description": "Standard per app excepts base security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5c8117a4adc7ec3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RDP access from CAST allowed IPs",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "SSH access from CAST allowed IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cast-ec2-sg-default20250919041429139200000003",
            "name_prefix": "cast-ec2-sg-default",
            "owner_id": "925774240130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cast-ec2-security-group",
              "Owner": "CAST Team",
              "Project": "castsoftware"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cast-ec2-security-group",
              "Owner": "CAST Team",
              "Project": "castsoftware"
            },
            "timeouts": null,
            "vpc_id": "vpc-030d39057ed8fa1b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}